Updated  SQL connector schema and handler loading to use new builder API